--- a/chrome/components/one_UC-newtabpage.css
+++ b/chrome/components/one_UC-newtabpage.css
@@ -1,10 +1,6 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text.
    https://github.com/Godiesc/firefox-one */
 
-/*@media (prefers-color-scheme: dark){:root{ scrollbar-color: #282736 #10111a !important; }}        /* Scroll bar color */
-/*@media(prefers-color-scheme: light){:root{ scrollbar-color: #d8d9da #f4f2f7 !important; }}        /* Scroll bar color */
-/**{ scrollbar-width: thin !important}*/                                                            /* Smaller Scroll bar */
-
 .alt-stop { stop-color: var(--left-color) !important; }                                             /* left color logo-and-wordmark */
 .main-stop { stop-color: var(--right-color) !important; }                                           /* right color logo-and wordmark*/
 
@@ -68,85 +64,97 @@
 
         /* Dark 1 - Fuchsia */
         #dark-sky,
-        #photographs[style*='e94b1e49-c518-40d6-98e3-dffab6cc370d.avif'],
-        body[style*="e94b1e49-c518-40d6-98e3-dffab6cc370d.avif"]{
+        body[style*="e94b1e49-c518-40d6-98e3-dffab6cc370d.avif"],
+        body[style*="e94b1e49-c518-40d6-98e3-dffab6cc370d.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-dark1) !important;
             background-image: var(--wallpaper-dark1) !important;
         }
 
         /* Dark 2 - Ultraviolet */
         #dark-mountain,
-        #photographs[style*='af6073d2-cbb2-4e28-b642-3327d14808b2.avif'],
-        body[style*="af6073d2-cbb2-4e28-b642-3327d14808b2.avif"]{
+        body[style*="af6073d2-cbb2-4e28-b642-3327d14808b2.avif"],
+        body[style*="af6073d2-cbb2-4e28-b642-3327d14808b2.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-dark2) !important;
             background-image: var(--wallpaper-dark2) !important;
         }
 
         /* Dark 3 - Blue */
         #dark-panda,
-        #photographs[style*='6b8eb3cf-f232-4c7b-a179-afd174555134.avif'],
-        body[style*="6b8eb3cf-f232-4c7b-a179-afd174555134.avif"]{
+        body[style*="6b8eb3cf-f232-4c7b-a179-afd174555134.avif"],
+        body[style*="6b8eb3cf-f232-4c7b-a179-afd174555134.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-dark3) !important;
             background-image: var(--wallpaper-dark3) !important;
         }
         
         /* Dark 4 - Green */
         #dark-fox-anniversary,
-        #photographs[style*='d8b71c77-9985-41d2-b98e-51bebc60e595.avif'],
-        body[style*="d8b71c77-9985-41d2-b98e-51bebc60e595.avif"]{
+        body[style*='d8b71c77-9985-41d2-b98e-51bebc60e595.avif'],
+        body[style*="d8b71c77-9985-41d2-b98e-51bebc60e595.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-dark4) !important;
             background-image: var(--wallpaper-dark4) !important;
         }
 
         /* Dark 5 - Swamp */
         #dark-landscape,
-        #photographs[style*='10e23599-85bc-4660-ae06-7a67befbbcf9.avif'],
-        body[style*="10e23599-85bc-4660-ae06-7a67befbbcf9.avif"]{
+        body[style*='10e23599-85bc-4660-ae06-7a67befbbcf9.avif'],
+        body[style*="10e23599-85bc-4660-ae06-7a67befbbcf9.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-dark5) !important;
             background-image: var(--wallpaper-dark5) !important;
         }
 
         /* Dark 6 - Gray */
         #dark-beach,
-        #photographs[style*='966b18ad-3733-41c4-92f6-c89cdf1381d0.avif'],
-        body[style*="966b18ad-3733-41c4-92f6-c89cdf1381d0.avif"]{
+        body[style*='966b18ad-3733-41c4-92f6-c89cdf1381d0.avif'],
+        body[style*="966b18ad-3733-41c4-92f6-c89cdf1381d0.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-dark6) !important;
             background-image: var(--wallpaper-dark6) !important;
         }
 
         /* Light 1 - Fuchsia */
         #light-panda,
-        #photographs[style*='dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif'],
-        body[style*="dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif"]{
+        body[style*='dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif'],
+        body[style*="dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-light1) !important;
             background-image: var(--wallpaper-light1) !important;
         }
 
         /* Light 2 - Ultraviolet */
         #light-landscape,
-        #photographs[style*='d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif'],
-        body[style*="d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif"]{
+        body[style*='d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif'],
+        body[style*="d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-light2) !important;
             background-image: var(--wallpaper-light2) !important;
         }
 
         /* Light 3 - BLue */
         #light-mountain,
-        #photographs[style*='5344443f-f427-4029-bc6b-68bc22f83355.avif'],
-        body[style*="5344443f-f427-4029-bc6b-68bc22f83355.avif"]{
+        body[style*='5344443f-f427-4029-bc6b-68bc22f83355.avif'],
+        body[style*="5344443f-f427-4029-bc6b-68bc22f83355.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-light3) !important;
             background-image: var(--wallpaper-light3) !important;
         }
 
         /* Light 4 - Rose */
         #light-sky,
-        #photographs[style*='45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif'],
-        body[style*="45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif"]{
+        body[style*='45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif'],
+        body[style*="45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-light4) !important;
             background-image: var(--wallpaper-light4) !important;
         }
 
         /* Light 5 - Lightgreen */
         #light-beach,
-        #photographs[style*='56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif'],
-        body[style*="56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif"]{
+        body[style*='56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif'],
+        body[style*="56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-light5) !important;
             background-image: var(--wallpaper-light5) !important;
         }
         
         /* Light 6 - Orange */
         #light-fox-anniversary,
-        #photographs[style*='a5a041de-9275-4eb5-8f21-a0171c82d388.avif'],
-        body[style*="a5a041de-9275-4eb5-8f21-a0171c82d388.avif"]{
+        body[style*='a5a041de-9275-4eb5-8f21-a0171c82d388.avif'],
+        body[style*="a5a041de-9275-4eb5-8f21-a0171c82d388.avif"] #photographs {
+            --newtab-wallpaper: var(--wallpaper-light6) !important;
             background-image: var(--wallpaper-light6) !important;
         }
     }
@@ -251,11 +259,6 @@
 
     .wordmark {
         background-image: url("../icons/firefox-wordmark.svg") !important;
-    }
-    
-    .logo-and-wordmark {
-        display: var(--logo-wordmark-display) !important;
-        Opacity: var(--logo-wordmark-visibility) !important;
     }
 
     @media (height < 700px) {
@@ -540,6 +543,25 @@
     .search-inner-wrapper:not(:focus){
         border-radius: 34px !important;
         backdrop-filter: none !important;
+    }
+    
+    /* Logo and Search when it get sticky position */
+    
+    @media (height > 700px) {
+        body:not(.inline-onboarding) .fixed-search .search-wrapper {
+            --my-image-background-blur: color-mix(in srgb, var(--contrast-color), transparent) !important;
+            --my-solid-background-blur: color-mix(in srgb, var(--newtab-background-color), transparent) !important;
+            background-image: linear-gradient(
+                var(--my-image-background-blur), var(--my-image-background-blur)),
+                var(--newtab-wallpaper, none),
+                linear-gradient(var(--my-solid-background-blur, transparent), var(--my-solid-background-blur, transparent))!important;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            backdrop-filter: var(--personal-blur) !important;
+            border-color: Field !important;
+            box-shadow: 0 2px 6px 0 black !important;
+        }
     }
     
     /* Font color */
